--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1582,12 +1582,13 @@ h4 { font-size: 1.5rem; }
     position: relative;
 }
 
-.schedule-timeline::before {
+/* Individual timeline segments that build continuously */
+.schedule-item::after {
     content: '';
     position: absolute;
-    left: 280px;
+    left: 398px;
     top: 0;
-    bottom: 0;
+    height: calc(100% + 3rem);
     width: 3px;
     background: repeating-linear-gradient(
         to bottom,
@@ -1597,6 +1598,14 @@ h4 { font-size: 1.5rem; }
         transparent 16px
     );
     border-radius: 2px;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform 0.6s ease;
+    z-index: 1;
+}
+
+.schedule-item.timeline-revealed::after {
+    transform: scaleY(1);
 }
 
 .schedule-item {
@@ -1617,8 +1626,8 @@ h4 { font-size: 1.5rem; }
 }
 
 .schedule-time {
-    width: 280px;
-    text-align: center;
+    width: 400px;
+    text-align: right;
     padding-right: 2rem;
     flex-shrink: 0;
     display: flex;
@@ -1631,7 +1640,7 @@ h4 { font-size: 1.5rem; }
 .schedule-time::after {
     content: '';
     position: absolute;
-    right: -10px;
+    right: -9px;
     top: 50%;
     transform: translateY(-50%);
     width: 12px;
@@ -1649,14 +1658,19 @@ h4 { font-size: 1.5rem; }
     font-weight: 700;
     color: var(--primary-color);
     text-shadow: 0 1px 2px rgba(0,0,0,0.1);
-    text-align: right;
-    margin-right: 1rem;
+    text-align: left;
+    margin-right: 1.5rem;
+    width: 100%;
 }
 
 .schedule-time .duration {
+    display: block;
     font-size: 0.9rem;
     color: var(--text-light);
     margin-top: 0.25rem;
+    text-align: left;
+    margin-right: 1.5rem;
+    width: 100%;
 }
 
 .schedule-content {
