--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,7 +468,7 @@ h4 { font-size: 1.5rem; }
 .program-highlights {
     padding: 6rem 0;
     background: var(--white);
-    
+    display:none;
 }
 
 .program-grid {
